@@ -1,4 +1,4 @@
-.TH VIFM 1 "20 Jan 2024" "vifm 0.13"
+.TH VIFM 1 "24 Feb 2024" "vifm 0.13"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -6945,7 +6945,7 @@ How files are compared:
  \- bysize     \- only by their size;
  \- bycontents \- by data they contain (combination of size and hash of \
 small chunk of contents is used as first approximation, so don't worry too \
-much about large files).
+much about large files; non-regular files like pipes are assumed to be empty).
 
 Which files to display:
  \- listall    \- all files;
